# AudioTokenLab

./: .gitignore  LICENSE  README.md  REPORT.md  modal_app.py  pyproject.toml
experiments/configs/: demo.json  encodec_demo.json  mulaw_demo.json  quiet_demo.json
experiments/results/: encodec_broader_speech_asr_modal_2026-06-16_listening_study.csv  encodec_broader_speech_asr_modal_2026-06-16_publication_summary.json  encodec_broader_speech_asr_modal_2026-06-16_serving_stack_report.md  encodec_broader_speech_asr_modal_2026-06-16_trained_selector.json  encodec_broader_speech_asr_smoke_2026-06-15_listening_study.csv  encodec_broader_speech_asr_smoke_2026-06-15_publication_summary.json  encodec_broader_speech_asr_smoke_2026-06-15_serving_stack_report.md  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_asr_evaluator.json  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_asr_summary.json  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_listening_study.csv  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_listening_study_rating_summary.json  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_listening_study_rating_summary.md  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_publication_summary.json  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_serving_stack_report.md  encodec_broader_speech_asr_trained_heldout_small_en_2026-06-16_speaker_summary.json  encodec_librispeech_asr_100clip_listening_examples.md  encodec_librispeech_asr_modal_2026-06-15.json  (+2 more)
tests/: test_pipeline.py
(+25 files in other folders)
