[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audiotokenlab"
version = "0.1.0"
description = "Benchmarking and compression tools for audio-token language model workloads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AudioTokenLab contributors" }
]
keywords = ["audio", "speech", "ml-infra", "tokenization", "benchmarking"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.scripts]
audiotokenlab = "audiotokenlab.cli:main"

[project.optional-dependencies]
encodec = [
  "torch>=2.0",
  "encodec>=0.1.1"
]
modal = [
  "modal>=1.0"
]
asr = [
  "faster-whisper>=1.0.0"
]
speaker = [
  "speechbrain>=1.0.0"
]
datasets = [
  "datasets[audio]>=2.19.0"
]
serving = [
  "torch>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
